# gitarootools

./: .flake8  .gitignore  CHANGELOG.md  COPYING.md  LICENSE  README.md  pyproject.toml  tox.ini
gitarootools/: __init__.py
gitarootools/archive/: pakcontainer.py  paktoml.py  xgmcontainer.py  xgmitem.py  xgmtoml.py
gitarootools/audio/: __init__.py  imccontainer.py  imctoml.py  subsong.py
gitarootools/cmdline/: gmo2animnames.py  imcpack.py  imcunpack.py  imx2png.py  pakpack.py  pakunpack.py  png2imx.py  subsong2common.py  subsong2subimc.py  subsong2wav.py  subsongconv.py  xgmpack.py  xgmunpack.py
gitarootools/image/: imximage.py
gitarootools/miscutils/: cmdutils.py  datautils.py  extutils.py
gitarootools/other/: gmomodel.py
tests/: common.py  test_gitarootools.py
tests/archive/: test_pak_packing.py  test_xgm_packing.py
tests/archive/test_pak_packing_data/pack/pack/: C.gmo
tests/archive/test_pak_packing_data/unpack/: unpack.PAK  unpack.SSQ
tests/archive/test_pak_packing_data/unpack/expected_output/: A.gmo  unpack.PAK.toml
tests/archive/test_xgm_packing_data/pack/pack/: BB.IMX  C.animsep  DD.XG  DD.animsep  EE.XG  pack.XGM.toml
tests/archive/test_xgm_packing_data/unpack/: unpack.XGM
tests/archive/test_xgm_packing_data/unpack/expected_output/: A.IMX  C.XG  E.animsep  unpack.XGM.toml
tests/audio/: test_imc_packing.py  test_subsong_conversion.py
tests/audio/test_imc_packing_data/pack/: expected_output.IMC
tests/audio/test_imc_packing_data/pack/pack/: pack.IMC.toml
tests/audio/test_imc_packing_data/unpack/: unpack.IMC
tests/audio/test_imc_packing_data/unpack/expected_output/: 00.Piano.sub.imc  00.apple1.sub.imc  01.BrassLeft.sub.imc  01.apple2.sub.imc  02.BrassRight.sub.imc  03.BrassLPianoR.sub.imc  unpack.IMC.toml
tests/audio/test_subsong_conversion_data/subimc2wav/: input.sub.imc
tests/audio/test_subsong_conversion_data/wav2subimc/: expected_output.sub.imc
tests/image/: test_imx_conversion.py
tests/image/test_imx_conversion_data/imx2png/: cc0_rgba32.IMX
tests/image/test_imx_conversion_data/png2imx/expected_output/: cc0.i4.IMX
tests/image/test_imx_conversion_data/png2imx/expected_output_alpha/: cc0_alpha.auto_i4.IMX  cc0_alpha.auto_i8.IMX  cc0_alpha.auto_rgba.IMX  cc0_alpha.i4.IMX  cc0_alpha.i8.IMX  cc0_alpha.rgb24.IMX
tests/image/test_imx_conversion_data/png2imx/expected_output_opaque/: cc0_opaque.auto_i4.IMX  cc0_opaque.auto_i8.IMX  cc0_opaque.i8.IMX
