[tool.poetry]
name = "gitarootools"
version = "0.1.5"
description = "command line tools to work with Gitaroo Man game data"
license = "MIT"
authors = ["boringhexi <boringhexi@pm.me>"]
readme = "README.md"
repository = "https://github.com/boringhexi/gitarootools"

[tool.poetry.dependencies]
python = "^3.7"
tomlkit = "^0.11.2 "
pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
gm-imcpack = "gitarootools.cmdline.imcpack:main"
gm-imcunpack = "gitarootools.cmdline.imcunpack:main"
gm-subsongconv = "gitarootools.cmdline.subsongconv:main"
gm-subsong2subimc = "gitarootools.cmdline.subsong2subimc:main"
gm-subsong2wav = "gitarootools.cmdline.subsong2wav:main"
gm-xgmpack = "gitarootools.cmdline.xgmpack:main"
gm-xgmunpack = "gitarootools.cmdline.xgmunpack:main"
gm-imx2png = "gitarootools.cmdline.imx2png:main"
gm-png2imx = "gitarootools.cmdline.png2imx:main"

[build-system]
requires = ["poetry>=1.1.14"]
build-backend = "poetry.masonry.api"
